--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,9 @@ repos:
     -   id: check-yaml
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
+    -   id: flake8
+    -   id: check-merge-conflict
+    -   id: end-of-file-fixer
 -   repo: https://github.com/psf/black
     rev: 19.3b0
     hooks:
