fix: refactoring settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [flake8]
-exclude = .git,*migrations*
+exclude = .git,.tox,*/migrations/*
 max-line-length = 119
 
 [isort]
@@ -14,3 +14,14 @@ default_section = THIRDPARTY
 known_first_party = simple
 known_django = django
 sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+
+[coverage:run]
+branch = true
+source = social
+omit =
+    *migrations*
+    *tests*
+    *commands*
+    *admin*
+    *wsgi*
+    *conftest*
