settings.cnf file modified

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,7 @@ omit =
     *admin*
     *wsgi*
     *conftest*
+
+[tool:pytest]
+DJANGO_SETTING_MODULE = social.sections.production
+norecursedirs = .tox .git */migrations/* */static/* docs venv node_modules
