--- a/setup.cfg
+++ b/setup.cfg
@@ -27,5 +27,5 @@ omit =
     *conftest*
 
 [tool:pytest]
-DJANGO_SETTING_MODULE = social.sections.production
+DJANGO_SETTINGS_MODULE = social.sections.production
 norecursedirs = .tox .git */migrations/* */static/* docs venv node_modules
