--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,17 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
+            name: install dependencies
+            command: |
+              python3 -m venv venv
+              . venv/bin/activate
+              pip install -U -r requirements.txt
+              pip install flake8
+              
+              # install gdal for postgis
+              apt update
+              apt install -y libgdal-dev
+      - run:
           command: ./manage.py test
           name: Test
 
