--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,8 +25,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        apt update
-        apt install -y libgdal-dev
+        sudo apt update
+        sudo apt install -y libgdal-dev
     - name: Run Tests
       run: |
         python manage.py test
