--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -3,5 +3,5 @@ http-socket = :$(PORT)
 master = true
 processes = 4
 die-on-term = true
-module = wsgi:application
+module = social.wsgi:application
 memory-report = true
